--- a/projects/valley/index.html
+++ b/projects/valley/index.html
@@ -280,7 +280,7 @@
                   <td colspan="11" style="text-align: center; font-weight: bold;">Ours</td>
               </tr>
               <tr>
-                  <td style="font-weight: bold;">Valley</td>
+                  <td style="font-weight: bold;">Valley-7B</td>
                   <td>67.40</td>
                   <td>80.68</td>
                   <td>60.93</td>
