feat: modify the table

--- a/projects/valley/index.html
+++ b/projects/valley/index.html
@@ -150,7 +150,7 @@
           <thead>
               <tr>
                   <th style="width:150px; text-align: center; vertical-align: middle;">Models</th>
-                  <th style="width:80px; text-align: center; vertical-align: middle;">AVerage</th>
+                  <th style="width:80px; text-align: center; vertical-align: middle;">Average</th>
                   <th style="width:80px; text-align: center; vertical-align: middle;">MMBench</th>
                   <th style="width:80px; text-align: center; vertical-align: middle;">MMStar</th>
                   <th style="width:80px; text-align: center; vertical-align: middle;">MMMU</th>
@@ -179,7 +179,7 @@
               </tr>
               <tr>
                   <td style="font-weight: bold;">GPT-4o-20241120</td>
-                  <td>72</td>
+                  <td>72.02</td>
                   <td>84.3</td>
                   <td>65.1</td>
                   <td>70.7</td>
@@ -191,7 +191,7 @@
               </tr>
               <tr>
                   <td style="font-weight: bold;">Gemini-1.5-Pro-002</td>
-                  <td>68.9</td>
+                  <td>72.14</td>
                   <td>82.8</td>
                   <td>67.1</td>
                   <td>68.6</td>
@@ -206,7 +206,7 @@
               </tr>
               <tr>
                   <td style="font-weight: bold;">InternVL2.5-8B</td>
-                  <td>68.1</td>
+                  <td>68.11</td>
                   <td>82.5</td>
                   <td>63.2</td>
                   <td>56.2</td>
@@ -230,7 +230,7 @@
               </tr>
               <tr>
                   <td style="font-weight: bold;">BlueLM-V-3B</td>
-                  <td>66.1</td>
+                  <td>66.11</td>
                   <td>82.7</td>
                   <td>62.3</td>
                   <td>45.1</td>
@@ -242,7 +242,7 @@
               </tr>
               <tr>
                   <td style="font-weight: bold;">MiniCPM-V-2.6</td>
-                  <td>65.2</td>
+                  <td>65.16</td>
                   <td>78</td>
                   <td>57.5</td>
                   <td>49.8</td>
@@ -254,7 +254,7 @@
               </tr>
               <tr>
                   <td style="font-weight: bold;">Ovis1.5-Llama3-8B</td>
-                  <td>62.2</td>
+                  <td>62.25</td>
                   <td>76.6</td>
                   <td>57.3</td>
                   <td>48.3</td>
@@ -266,7 +266,7 @@
               </tr>
               <tr>
                   <td style="font-weight: bold;">LLaVA-OneVision-7B (SI)</td>
-                  <td>61.2</td>
+                  <td>61.18</td>
                   <td>76.8</td>
                   <td>56.7</td>
                   <td>46.8</td>
