feat: modify the introduction

--- a/projects/valley/index.html
+++ b/projects/valley/index.html
@@ -133,7 +133,7 @@
           Valley is a cutting-edge multimodal large model (MLLM) designed to handle a variety of tasks involving text, images, and video data, which is developed by ByteDance.
           Our model achieved the best results in the inhouse e-commerce and short-video benchmarks, much better then other SOTA opensource models.
           And it has also demonstrated comparatively outstanding performance on OpenCompass, a renowned multimodal model evaluation leaderboard. 
-          With a average score of <b>67.40</b>, it ranks top2 among the known open-source MLLMs.
+          With a average score of <b>67.40</b>, it ranks top2 among the known open-source MLLMs (<10B).
       </div>
     </div>
   </div>
